--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 	src: url(./fonts/Norse-Bold.otf);
 }
 
+:root {
+	--green-color: #596d48;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -35,7 +39,10 @@ footer {
 .right-form {
 	width: calc(100vw * 2 / 3);
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	font-size: 12px;
+	padding: 0;
 }
 
 .banner {
@@ -68,4 +75,51 @@ footer {
 footer p {
 	margin: 8px;
 	font-size: 8px;
+}
+
+.content-1 {
+	width: 80%;
+	padding: 24px;
+}
+
+button[type="submit"] {
+	border: none;
+	border-radius: 4px;
+	padding: 8px 24px;
+	font-size: 8px;
+	background-color: var(--green-color);
+	color: white;
+	font-weight: bold;
+}
+
+a {
+	color: var(--green-color);
+}
+
+.form-content {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+	margin: 16px 0px;
+	padding: 24px;
+	box-sizing: border-box;
+	gap: 16px;
+	padding-right: clamp(0px, 25%, 200px);
+}
+
+.form-field {
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 45%;
+}
+
+.content-3 {
+	margin: 24px;
+}
+
+.form-title {
+	width: 100%;
+	margin: 0px;
+	font-size: 16px;
 }
