--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ footer {
 	display: flex;
 	flex-direction: row;
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .left-photo {
@@ -31,6 +31,7 @@ footer {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: calc(100vw / 3);
+	max-height: 100%;
 	display: flex;
 	justify-content: center;
 	position: relative;
@@ -43,6 +44,7 @@ footer {
 	justify-content: center;
 	font-size: 12px;
 	padding: 0;
+	max-height: 100%;
 }
 
 .banner {
@@ -92,6 +94,11 @@ button[type="submit"] {
 	font-weight: bold;
 }
 
+h3 {
+	font-size: 8px;
+	font-weight: 550;
+}
+
 a {
 	color: var(--green-color);
 }
@@ -122,4 +129,17 @@ a {
 	width: 100%;
 	margin: 0px;
 	font-size: 16px;
+}
+
+input {
+	border-radius: 4px;
+	border: 1px solid #e5e7eb;
+}
+
+input:focus {
+	border-color: lightblue;
+}
+
+input:invalid {
+	border-color: lightcoral;
 }
