--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ footer p {
 
 .content-1 {
 	width: 80%;
-	padding: 24px;
+	padding-left: 24px;
 }
 
 button[type="submit"] {
@@ -127,15 +127,18 @@ a {
 	font-size: 16px;
 }
 
-input {
+.form-field input {
+	outline: none;
 	border-radius: 4px;
 	border: 1px solid #e5e7eb;
 }
 
-input:focus {
-	border-color: lightblue;
+.form-field input:focus,
+.form-field input:focus:invalid {
+	border: 1px solid blue;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-input:invalid {
+.form-field input:invalid {
 	border-color: lightcoral;
 }
